grunt watch is set up for the whole folder and is now watching .js, .html,.scss,.css and can be changed to watch php files as well

--- a/learning-grunt/v5/landing_pages/default/index.html
+++ b/learning-grunt/v5/landing_pages/default/index.html
@@ -3,7 +3,10 @@
 <? include_once(RV_LandingPage::find('includes/masthead/_masthead.php')); ?>
 
 <div class="hero hero-landing">
-
+	<div class="grunt">
+		
+	</div>
+	<!-- /.grunt -->
 	<?
 		/*
 		 * the example below looks for the first image parameter in experience ###/images (ie: 100/images/heroes/hero-landing.jpg),
